Fixed alignmenmt

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6132,7 +6132,7 @@ font-size: 36px;
 }
 .search-area p{
     font-size: 18px;
-    color: #b0cbd7;
+    color: white;
     margin-top: 15px;
 }
 .search-area .slider-btn,.search-area .slider-btn button{
